# src/main/resources/openapi/openapi.yaml
@@ -62,21 +62,22 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TimerList'
+                $ref: '#/components/schemas/TimersResponse'
               examples:
                 timerList:
                   summary: List of timers
                   value:
-                    - timerId: "123e4567-e89b-12d3-a456-426614174000"
-                      created: 1710686400000
-                      delay: 3600
-                      status: "SCHEDULED"
-                      attempts: 0
-                    - timerId: "223e4567-e89b-12d3-a456-426614174001"
-                      created: 1710686500000
-                      delay: 120
-                      status: "PROCESSING"
-                      attempts: 1
+                    timers:
+                      - timerId: "123e4567-e89b-12d3-a456-426614174000"
+                        created: 1710686400000
+                        delay: 3600
+                        status: "SCHEDULED"
+                        attempts: 0
+                      - timerId: "223e4567-e89b-12d3-a456-426614174001"
+                        created: 1710686500000
+                        delay: 120
+                        status: "PROCESSING"
+                        attempts: 1
         '500':
           $ref: '#/components/responses/InternalServerErrorResponse'
 
@@ -214,6 +215,15 @@ components:
       description: List of timers.
       items:
         $ref: '#/components/schemas/Timer'
+
+    TimersResponse:
+      type: object
+      description: Wrapper object containing all timers.
+      required:
+        - timers
+      properties:
+        timers:
+          $ref: '#/components/schemas/TimerList'
 
     CreateTimerRequest:
       type: object
